src/test/ui/issues/issue-6596-1.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-1.rs:3:9
   |
LL |         $nonexistent
   |         ^^^^^^^^^^^^ unknown macro variable
...
LL |     e!(foo);
   |     -------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

